# pressw-llm-powered-recipe-bot

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  openapi.json
.github/workflows/: ci.yml
backend/: Dockerfile  llm.py  main.py  pyproject.toml  requirements.txt
backend/graphs/: __init__.py  agent.py  classify.py  graph.py  refusal.py  state.py
backend/schemas/: __init__.py  cooking.py
backend/scripts/: export_openapi.py
backend/tests/: test_agent.py  test_classify.py  test_cookware.py  test_refusal.py
backend/tools/: __init__.py  cookware.py  search.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/chat/: ChatInput.tsx  ChatLayout.tsx  EmptyState.tsx  ErrorState.tsx  LoadingIndicator.tsx  MessageBubble.tsx  MessageList.tsx  index.ts  types.ts
frontend/components/ui/: button.tsx  input.tsx  scroll-area.tsx
frontend/lib/: api-types.generated.ts  api.ts
